clusters/production/jellyfin/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: media
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
