clusters/production/jellyfin/httproute.yaml
# TODO: Update hostnames to production domain
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: https-external
      namespace: kgateway-system
  hostnames:
    - "jellyfin.rpcu.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: "3600s"
        backendRequest: "3600s"
      backendRefs:
        - name: jellyfin
          port: 8096
